# COMP3501

./: 3203.docx  3203A2  3203A2.txt  Draft  Notes on A+B  README.md  ShalinL_Analysis Text A.docx  TEXT A ANALYSIS.pdf.docx
Assignments/: Cylinder_Example.cpp  main.cpp
Assignments/Assignment_01/: CMakeLists.txt  Entity.cpp  Entity.h  GameManager.cpp  GameManager.h  Includes.h  Notes.h  fragment_shader.glsl  main.cpp  vertex_shader.glsl
Assignments/Assignment_02/: CMakeLists.txt  fragment_shader.glsl  main.cpp
Assignments/Assignment_03/: CMakeLists.txt  Checklist.txt  ReadMe.txt  asteroid.cpp  asteroid.h  asteroid_material_fp.glsl  asteroid_material_vp.glsl  camera.cpp  camera.h  complex_node.cpp  complex_node.h  game.cpp  game.h  laser_material_fp.glsl  laser_node.cpp  laser_node.h  material_vp.glsl  orbit_node.cpp  orbit_node.h  player_node.cpp  player_node.h  resource_manager.cpp  resource_manager.h  root_node.cpp  root_node.h  scene_graph.cpp  scene_graph.h  scene_node.cpp  scene_node.h
Assignments/Assignment_04/: CMakeLists.txt  CheckList.txt  game.cpp  game.h  resource_manager.cpp  resource_manager.h  scene_node.cpp  scene_node.h  textured_material_fp.glsl  three-term_shiny_blue_fp.glsl  toon_material_fp.glsl  toon_material_vp.glsl
Assignments/Assignment_05/: CMakeLists.txt  README.txt  fire_fp.glsl  fire_gp.glsl  fire_vp.glsl  game.cpp  game.h  resource_manager.cpp  resource_manager.h  ring_gp.glsl  ring_vp.glsl  scene_graph.cpp  scene_graph.h  scene_node.cpp  scene_node.h  screen_space_fp.glsl  three-term_shiny_blue_fp.glsl  three-term_shiny_blue_vp.glsl
Assignments/Skeleton_/: Application.cpp  Application.h  CMakeLists.txt  GameManager.cpp  GameManager.h  GameObject.cpp  GameObject.h  main.cpp
Demos/: Checklist.txt
Demos/AudioDemo/: CMakeLists.txt  audio_demo.cpp  audio_manager.h  path_config.h.in
Demos/CameraDemo/: CMakeLists.txt  Checklist.txt  game.cpp
Demos/FireDemo/: game.cpp  resource_manager.cpp  resource_manager.h
Demos/IlluminationDemo/: CMakeLists.txt  game.cpp  three-term_shiny_blue_fp.glsl  toon_material_fp.glsl
Demos/MeshDemo/: CMakeLists.txt  main.cpp
Demos/NormalMappingDemo/: CMakeLists.txt  game.cpp  toon_material_fp.glsl
Demos/ParticleDemo/: CMakeLists.txt  fire_fp.glsl  fire_gp.glsl  fire_vp.glsl  game.cpp  game.h  particle_gp.glsl  particle_node.cpp  particle_node.h  particle_vp.glsl  resource_manager.cpp  resource_manager.h  ring_fp.glsl  scene_node.cpp  scene_node.h
Demos/ScreenSpaceDemo2/: game.cpp  game.h  resource_manager.cpp  scene_graph.cpp  scene_graph.h  screen_space_fp.glsl
Demos/TorusDemo/: CMakeLists.txt  main.cpp  main2.cpp
Other Assignments/: 2104 2.txt  3203 A3.docx  3203 A3.txt
